don't know who placed the padding at the bottom here, but whitespace fix

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,5 @@
 body {
     margin: 0;
-    padding-bottom: 100px;
     position: relative;
     overflow-x: hidden;
     box-sizing: border-box;
